# tutorial-pybr

./: pyproject.toml
.github/workflows/: main.yml
api_pedidos/: api.py  magalu_api.py  magalu_api_async.py
tests/: test_api.py
