[tool.poetry]
name = "tutorial-pybr"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
httpx = "^0.22.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
httpie = "^3.0.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
